Adding expat-devel to list of required installed packages such that APR utils can be built

--- a/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
@@ -25,6 +25,7 @@
       - atlas
       - atlas-devel
       - cpp
+      - expat-devel
       - gcc
       - gcc-c++
       - gcc-gfortran
@@ -55,6 +56,7 @@
       - atlas
       - atlas-devel
       - cpp
+      - expat-devel
       - gcc
       - gcc-c++
       - gcc-gfortran
