Adding missing group var, as well as fixing configuring for utf8proc and lz4

--- a/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
@@ -159,7 +159,6 @@
     chdir: '{{ SQLITE_BUILD_DIR }}/sqlite-autoconf-3280000'
   when: USE_S2I == 'yes'
 
-
 - name: << s2i/ubi only >> Create LZ4 build directory
   file:
     state: directory
@@ -174,21 +173,26 @@
 
 - name: << s2i/ubi only >> Configure LZ4 library
   shell: |
-    cd {{ LZ4_BUILD_DIR }}
+    cd {{ LZ4_BUILD_DIR }}/lz4
     ./configure
   when: USE_S2I == 'yes'
 
 - name: << s2i/ubi only >> Make LZ4 library
   make:
     target: all
-    chdir: '{{ LZ4_BUILD_DIR }}'
+    chdir: '{{ LZ4_BUILD_DIR }}/lz4'
   when: USE_S2I == 'yes'
 
 - name: << s2i/ubi only >> Install LZ4 library
   make:
     target: install
-    chdir: '{{ LZ4_BUILD_DIR }}'
+    chdir: '{{ LZ4_BUILD_DIR }}/lz4'
   when: USE_S2I == 'yes'
+
+- name: << s2i/ubi only >> Create directory for utf8proc
+  file:
+    state: directory
+    path: '{{ UTF8PROC_BUILD_DIR }}'
 
 - name: << s2i/ubi only >> Get utf8proc
   git:
@@ -200,13 +204,13 @@
 - name: << s2i/ubi only >> Make utf8proc
   make:
     target: all
-    chdir: '{{ UTF8PROC_BUILD_DIR }}'
+    chdir: '{{ UTF8PROC_BUILD_DIR }}/utf8proc'
   when: USE_S2I == 'yes'
 
 - name: << s2i/ubi only >> Install utf8proc
   make:
     target: install
-    chdir: '{{ UTF8PROC_BUILD_DIR }}'
+    chdir: '{{ UTF8PROC_BUILD_DIR }}/utf8proc'
   when: USE_S2I == 'yes'
 
 - name: << s2i/ubi only >> Create subversion build directory
