--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -29,7 +29,7 @@
     echo '' >> {{ NUMPY_SITE_CFG }}
     echo '[atlas]' >> {{ NUMPY_SITE_CFG }}
     echo 'atlas_libs = lapack, blas, cblas, tatlas' >> {{ NUMPY_SITE_CFG }}
-  when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
+  when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no' and RHEL_VERSION == '8'
 
 - name: Some versions of NumPy do not work well with later versions of Cython, so we need to add the -3 flag
   lineinfile:
