Updating playbook to use an environment var for TF pip package destination. Also adding some cleanup. Changing the command for executing 'build_pip_package'.

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -58,4 +58,4 @@
 
 - name: Build pip package with Bazel
   shell: |
-    ./bazel-bin/tensorflow/tools/pip_package/build_pip_package /tmp/tensorflow_pkg
+    'sh /bazel-bin/tensorflow/tools/pip_package/build_pip_package {{ TF_PIP_PACKAGE_LOCATION }}'
