Forgot to add a 'cd' command to change to the correct directory

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -58,4 +58,5 @@
 
 - name: Build pip package with Bazel
   shell: |
-    'sh /bazel-bin/tensorflow/tools/pip_package/build_pip_package {{ TF_PIP_PACKAGE_LOCATION }}'
+    cd {{ TENSORFLOW_BUILD_DIR }}
+    ./bazel-bin/tensorflow/tools/pip_package/build_pip_package {{ TF_PIP_PACKAGE_LOCATION }}
