Set install path to custom location

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
@@ -15,6 +15,7 @@
   pip:
     name: '{{ item["path"] }}'
     executable: pip3
+    extra_args: '--target={{ TF_INSTALL_DIR }}'
   with_items: '{{ tf_wheel_files["files"] }}'
 
 - name: Remove pip package
