--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_numpy/tasks/main.yaml
@@ -9,9 +9,9 @@
   shell: |
     echo '[ALL]' >> {{ NUMPY_SITE_CFG }}
     echo 'libraries = {{ FFTW_RHEL7_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'library_dirs = {{ FFTW_RHEL7_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'include_dirs = {{ FFTW_RHEL7_INCLUDE_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'runtime_library_dirs = {{ FFTW_RHEL7_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'include_dirs = {{ BLAS_INCLUDE_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'runtime_library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
     echo 'fftw_opt_libs = {{ FFTW_RHEL7_OPT_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
     echo '' >> {{ NUMPY_SITE_CFG }}
     echo '[atlas]' >> {{ NUMPY_SITE_CFG }}
@@ -22,9 +22,9 @@
   shell: |
     echo '[ALL]' >> {{ NUMPY_SITE_CFG }}
     echo 'libraries = {{ FFTW_RHEL8_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'library_dirs = {{ FFTW_RHEL8_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'include_dirs = {{ FFTW_RHEL8_INCLUDE_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'runtime_library_dirs = {{ FFTW_RHEL8_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'include_dirs = {{ BLAS_INCLUDE_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'runtime_library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
     echo 'fftw_opt_libs = {{ FFTW_RHEL8_OPT_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
     echo '' >> {{ NUMPY_SITE_CFG }}
     echo '[atlas]' >> {{ NUMPY_SITE_CFG }}
@@ -53,9 +53,9 @@
   shell: |
     echo '[ALL]' >> {{ NUMPY_SITE_CFG }}
     echo 'libraries = {{ OPENBLAS_LIB_NAMES }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'library_dirs = {{ OPENBLAS_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'include_dirs = {{ OPENBLAS_INCLUDE_DIR }}' >> {{ NUMPY_SITE_CFG }}
-    echo 'runtime_library_dirs = {{ OPENBLAS_LIBRARY_DIR }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'include_dirs = {{ BLAS_INCLUDE_DIRS }}' >> {{ NUMPY_SITE_CFG }}
+    echo 'runtime_library_dirs = {{ BLAS_LIB_DIRS }}' >> {{ NUMPY_SITE_CFG }}
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
 
 - name: Configure and build NumPy -- use OpenBLAS if specified
