--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_numpy/tasks/main.yaml
@@ -6,7 +6,7 @@
     CC="gcc -lblas -lgfortran" python3 setup.py install --prefix={{ NUMPY_INSTALL_DIR }}
   environment:
     PYTHONPATH: '{{ PYTHONPATH }}'
-    LD_LIBRARY_PATH: '{{ FFTW_RHEL7_LIBRARY_DIR }}:{{ FFTW_RHEL8_LIBRARY_DIR }}'
+    LD_LIBRARY_PATH: '{{ BLAS_LIB_DIR }}'
   when: USE_FFTW == 'yes' and USE_OPENBLAS == 'no'
 
 - name: Install NumPy
@@ -15,5 +15,5 @@
     python3 setup.py install --prefix={{ NUMPY_INSTALL_DIR }}
   environment:
     PYTHONPATH: '{{ PYTHONPATH }}'
-    LD_LIBRARY_PATH: '{{ OPENBLAS_LIBRARY_DIR }}'
+    LD_LIBRARY_PATH: '{{ BLAS_LIB_DIR }}'
   when: USE_FFTW == 'no' and USE_OPENBLAS == 'yes'
