Prevent TensorFlow from downloading its own NumPy

--- a/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/install_tensorflow/tasks/main.yaml
@@ -1,5 +1,11 @@
 ---
 
+- name: Symlink NumPy so that TensorFlow doesn't attempt to overwrite it
+  file:
+    src: '{{ NUMPY_INSTALL_DIR }}'
+    dest: '{{ TENSORFLOW_INSTALL_DIR }}/numpy'
+    state: link
+
 - name: Find TensorFlow wheel file
   find:
     paths: '{{ TF_PIP_PACKAGE_LOCATION }}'
