Removing timestamp from benchmark output since it was causing issues

--- a/TensorFlow/playbooks/TensorFlow_benchmarks/play.yaml
+++ b/TensorFlow/playbooks/TensorFlow_benchmarks/play.yaml
@@ -60,8 +60,8 @@
       register: gpu_benchmark_output
 
     # Save the benchmark outputs
-    - local_action: template src=cpu_benchmarks_output.j2 dest={{ BENCHMARKS_DIR }}/scripts/tf_cnn_benchmarks/{{ MODEL }}-cpu-benchmark-{{ lookup('pipe', 'date +%Y-%m-%d-%H:%M:%S') }}.log
+    - local_action: template src=cpu_benchmarks_output.j2 dest={{ BENCHMARKS_DIR }}/scripts/tf_cnn_benchmarks/{{ MODEL }}-cpu-benchmark.log
       when: LOCAL_PARAMETER_DEVICE == 'cpu'
 
-    - local_action: template src=gpu_benchmarks_output.j2 dest={{ BENCHMARKS_DIR }}/scripts/tf_cnn_benchmarks/{{ MODEL }}-gpu-benchmark-{{ lookup('pipe', 'date +%Y-%m-%d-%H:%M:%S') }}.log
+    - local_action: template src=gpu_benchmarks_output.j2 dest={{ BENCHMARKS_DIR }}/scripts/tf_cnn_benchmarks/{{ MODEL }}-gpu-benchmark.log
       when: LOCAL_PARAMETER_DEVICE == 'gpu'
